--- a/app/src/main/res/layout/fragmnet_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragmnet_navigation_drawer.xml
@@ -8,81 +8,89 @@
     <ViewSwitcher
         android:id="@+id/simpleViewSwitcher"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:inAnimation="@anim/slide_in_right"
+        android:outAnimation="@anim/slide_out_right">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:background="#FFFFFF"
+            android:orientation="vertical"
             android:weightSum="1">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Shop For"
-                android:textSize="12sp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
+                android:text="Shop For"
                 android:textColor="#c1c1c1"
-                />
+                android:textSize="12sp" />
 
             <ListView
                 android:id="@+id/parent_categoey_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawSelectorOnTop="false"
+                android:background="#FFFFFF"
                 android:divider="@null"
-                android:background="#FFFFFF"/>
+                android:drawSelectorOnTop="false" />
+
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/custom_border"
+                android:paddingTop="5dp"
+                android:weightSum="1">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:weightSum="1"
-        android:background="@drawable/custom_border"
-        android:layout_marginBottom="20dp"
-        android:paddingTop="5dp">
-        <ImageButton
-            android:layout_width="25dp"
-            android:layout_height="20dp"
-            android:src="@drawable/long_arrow_left"
-            android:id="@+id/back_button_nav_fragment"
-            android:background="@null"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight=".15"
-            />
+                <ImageButton
+                    android:id="@+id/back_button_nav_fragment"
+                    android:layout_width="30dp"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@null"
+                    android:src="@drawable/long_arrow_left"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitCenter"
+                   />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:text="Men"
-            android:layout_marginTop="10dp"
-            android:layout_weight=".9"
-            android:textStyle="bold"
-            android:textColor="#000000"
-            />
-    </LinearLayout>
-
-
+                <TextView
+                    android:id="@+id/nav_category_second_page_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Men"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:fontFamily="sans-serif-light"/>
+            </LinearLayout>
 
 
-    <ExpandableListView
+            <com.themallbd.workspaceit.view.AnimatedExpandableListView
 
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       />
+                android:id="@+id/expandable_list_view_nav_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                android:drawSelectorOnTop="true"
+                android:groupIndicator="@android:color/transparent"
+                android:childDivider="#f2f2f2"
+                android:divider="@null"
 
-</LinearLayout>
+
+
+                />
+
+        </LinearLayout>
 
 
     </ViewSwitcher>
