--- a/app/src/main/res/layout/navgation_fragment_parent_category.xml
+++ b/app/src/main/res/layout/navgation_fragment_parent_category.xml
@@ -1,33 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:weightSum="1"
-
-
-
-   >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:weightSum="1">
 
     <TextView
+        android:id="@+id/fragment_parent_category_title_text_view"
+        android:layout_width="0dp"
+        android:layout_height="55dp"
+        android:layout_marginLeft="15dp"
+        android:layout_weight=".9"
+        android:text="Woman"
+        android:textSize="15sp"
+        android:gravity="center_vertical"
+        />
+
+    <ImageView
+        android:id="@+id/fragment_arrow_image"
         android:layout_width="0dp"
         android:layout_height="20dp"
-        android:text="Woman"
-        android:textStyle="bold"
-        android:layout_weight=".9"
-        android:id="@+id/fragment_parent_category_title_text_view"
-        android:textSize="14sp"
-        android:layout_marginLeft="15dp"/>
-<ImageView
-    android:layout_width="0dp"
-    android:layout_height="20dp"
-    android:src="@drawable/right_arrow_parent_category"
-    android:layout_weight=".1"
-    android:id="@+id/fragment_arrow_image"
-    android:layout_marginRight="10dp"
-    />
+        android:layout_marginRight="10dp"
+        android:layout_weight=".1"
+        android:src="@drawable/right_arrow_parent_category"
+        android:layout_gravity="center_vertical"
+        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"/>
+
 </LinearLayout>
