--- a/app/src/main/res/drawable/action_bar_gradient.xml
+++ b/app/src/main/res/drawable/action_bar_gradient.xml
@@ -5,8 +5,8 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#911414"
-        android:endColor="#ee2a2c"
+        android:startColor="#FFFFFF"
+        android:endColor="#FFFFFF"
         android:type="linear" />
 
 </shape>
