--- a/app/src/main/res/layout/cart_update_count.xml
+++ b/app/src/main/res/layout/cart_update_count.xml
@@ -5,7 +5,7 @@
     android:id="@+id/notif_count"
     android:layout_width="60dp"
     android:layout_height="wrap_content"
-    android:drawableBottom="@drawable/cart_trans_new"
+    android:drawableBottom="@drawable/cart_trans_new_black"
     android:drawablePadding="-18dp"
     android:paddingBottom="10dp"
     android:background="@null"
