--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -14,7 +14,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:text="@string/app_name"
         android:padding="5dp"
         android:textSize="18sp"
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/myEditText"
-        android:background="#000000" />
+        android:background="#000000"
+        android:textColor="#000000"/>
 
     </android.support.v7.widget.Toolbar>
