--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,14 +7,15 @@
         android:id="@+id/action_openRight"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        android:icon="@drawable/ic_open_right"
+        android:icon="@drawable/usaer"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/action_search"
-        app:showAsAction="always"
+        app:showAsAction="always|withText|collapseActionView"
         android:title="search"
         app:actionViewClass="android.support.v7.widget.SearchView"
+        android:icon="@drawable/search_new_2_black"
         />
 
     <item
