--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,16 +8,19 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:homeAsUpIndicator">@drawable/short_arrow_left</item>
 
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="AppTheme.AppBarOverlay" parent="Platform.ThemeOverlay.AppCompat.Light">
     <item name="android:textSize">5sp</item>
+        <item name="android:homeAsUpIndicator">@drawable/short_arrow_left</item>
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
 
         <item name="android:textSize">12sp</item>
+        <item name="android:homeAsUpIndicator">@drawable/short_arrow_left</item>
 
     </style>
 
