--- a/app/src/main/res/layout/custom_horizontal_product_list.xml
+++ b/app/src/main/res/layout/custom_horizontal_product_list.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:background="#FFFFFF"
-   >
+    android:layout_width="310dp"
+    android:layout_height="302dp"
+    android:paddingLeft="13dp"
+    android:background="#D5D6D9"
+
+    >
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="200dp"
-        android:layout_height="260dp">
+        android:layout_width="270dp"
+        android:layout_height="286dp"
+        android:background="#FFFFFF"
+        android:padding="16dp"
+
+        >
 
         <ImageView
             android:layout_width="match_parent"
