--- a/app/src/main/res/layout/cart_update_count.xml
+++ b/app/src/main/res/layout/cart_update_count.xml
@@ -3,7 +3,7 @@
 
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/notif_count"
-    android:layout_width="60dp"
+    android:layout_width="50dp"
     android:layout_height="wrap_content"
     android:drawableBottom="@drawable/cart_trans_new_black"
     android:drawablePadding="-18dp"
@@ -11,7 +11,7 @@
     android:background="@null"
     android:text="0"
     android:textSize="12sp"
-    android:textColor="@android:color/white"
+    android:textColor="#7f7f7f"
     android:gravity="center"
     >
 
