--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -6,26 +6,19 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    local:theme="@style/ThemeOverlay.AppCompat.Light"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    android:paddingRight="7dp"
     android:paddingBottom="10dp"
+
+
     >
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="#000000"
-        android:text="@string/app_name"
-        android:padding="5dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_gravity="center|bottom"
-        android:id="@+id/toolbar_title" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/myEditText"
-        android:background="#000000"
-        android:textColor="#000000"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/mall_bd_logo_red"
+        android:layout_marginTop="14dp"
+        android:id="@+id/toolbar_icon"
+        />
+
 
     </android.support.v7.widget.Toolbar>
