--- a/app/src/main/res/layout/activity_search_product_list.xml
+++ b/app/src/main/res/layout/activity_search_product_list.xml
@@ -12,12 +12,12 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <TextView
+    <com.themallbd.workspaceit.view.CustomFontTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/searc_result"
         android:gravity="center"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
         android:layout_marginBottom="10dp"
