--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -539,7 +539,7 @@
                     android:orientation="vertical">
 
 
-                    <com.themallbd.workspaceit.utility.AllProductGridView
+                    <com.themallbd.workspaceit.view.CustomGridView
                         android:id="@+id/gridView_all_Product"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
