--- a/app/src/main/res/layout/activity_product_by_manufracturer.xml
+++ b/app/src/main/res/layout/activity_product_by_manufracturer.xml
@@ -3,11 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.themallbd.workspaceit.activity.ProductByManufracturerActivity">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
+
+    <GridView
+        android:id="@+id/product_by_manufracturer_grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#EEE"
+        android:columnWidth="170dp"
+        android:horizontalSpacing="2dp"
+        android:numColumns="2"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="2dp" />
 
 
 </LinearLayout>
