minor issue resolve

--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -50,7 +50,7 @@
 
                 <com.daimajia.slider.library.SliderLayout
                     android:id="@+id/slider_product_details"
-                    android:layout_width="350dp"
+                    android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:layout_gravity="center"
                     android:paddingLeft="30dp"
